fix layout width on mobile

--- a/src/layout/page-layout.module.scss
+++ b/src/layout/page-layout.module.scss
@@ -36,6 +36,7 @@
   align-items: center;
 
   .main-container {
+    width: 100%;
     max-width: $page-width;
   }
 }
